--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "openai": "^6.22.0",
-    "resend": "^6.9.2"
+    "resend": "^6.9.2",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
